<resources>
    <string name="app_name">Covid-19 Tracker</string>
    <string name="lgm">LGM</string>
    <string name="covid_19_tracker">Covid-19 Tracker</string>
    <string name="statename">Statename</string>
    <string name="district">District</string>
    <string name="active">Active :</string>
    <string name="_1234">1234</string>
    <string name="decreased">Deceased :</string>
    <string name="recovered">Recovered :</string>
    <string name="get_started">Get started</string>
</resources>